--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
     </div>
   </header>
 
-  <main class="container container-fullHeight">
+  <main class="container">
     <div class="row">
       <div class="col-md-8 offset-md-2">
         {{ content }}
